# podcast-time

./: .gitignore  LICENSE  README.md  podcasts.example.txt  pyproject.toml
src/podcast_time/: __init__.py  analyze.py  cli.py  episodes.py  feeds.py  identify.py  input.py  itunes.py  plot.py
